# protocol/openapi.json
@@ -2393,6 +2393,11 @@
             "maxItems": 32,
             "type": "array",
             "items": { "type": "string", "minLength": 1, "maxLength": 80 }
+          },
+          "executionProviders": {
+            "maxItems": 256,
+            "type": "array",
+            "items": { "type": "string", "minLength": 1, "maxLength": 256 }
           }
         },
         "required": ["version", "revision", "providers", "supportedKinds"],
